parse/internal/parser/testdata/failing/missing-member-name.trunnel
struct encrypted_record with context stream_settings {
  u16 n_blocks;
  // following problem seen in trunnel manual
  struct block[n_blocks];
}
